public_html/assets/style.css
:root {
  --color-text: white;
  --color-text-inverted: black;
  --color-muted-text: hsl(219, 11%, 65%);
  --color-background-default: hsl(224, 71%, 4%);
  --color-background-alternative: hsl(220, 43%, 11%);
  --color-background-field: hsl(223, 22%, 18%);
  --color-border-field: hsl(219, 14%, 27%);
  --color-background: var(--color-background-default);
  --color-dimmed: hsla(0, 0%, 0%, 0.3);
  --color-lightened: hsla(0, 0%, 100%, 0.3);
  --color-acent: hsl(48, 100%, 45%);
  --color-info: hsl(208, 100%, 50%);
  --color-info-background: hsla(208, 100%, 50%, 0.2);
  --color-success: hsl(155, 100%, 28%);
  --color-success-background: hsla(155, 100%, 28%, 0.2);
  --color-warn: hsl(36, 76%, 40%);
  --color-warn-background: hsla(36, 76%, 40%, 0.4);
  --color-error: hsl(0, 76%, 40%);
  --color-error-background: hsla(0, 76%, 40%, 0.2);

  --color-background-live: var(--color-info);

  --border-radius: 0rem;
  --border-size: 1px;

  --transition-height: 15rem;
  --page-max-width: 150ch;

  color-scheme: dark;
  font-family: Verdana, sans-serif;
  color: var(--color-text);
}
html {
  height: 100%;
}
body {
  margin: 0;
  background-color: var(--color-background);
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
body:has(dialog[open]) {
    overflow: hidden;
}
main {
  width: 100%;
  height: 100%;
  max-width: var(--page-max-width);
}

/* Transitions */
.transition {
  padding-top: calc(var(--transition-height) / 2);
  padding-bottom: var(--transition-height);
  margin-bottom: calc(var(--transition-height) / 1.5);
}
.sun::before {
  content: "";
  position: absolute;
  width: 17rem;
  height: 17rem;
  top: -9.5rem;
  left: -9.5rem;
  background-color: var(--color-acent);
  border-radius: 50%;
}
.curve {
  position: absolute;
  height: var(--transition-height);
  width: 100%;
  bottom: 0;
}
.curve::before {
  content: "";
  display: block;
  position: absolute;
  border-radius: 100% 40%;
  width: 55.5%;
  height: 100%;
  background-color: var(--color-transition-from);
  left: -4%;
  transform: translate(0, 40%);
  z-index: -1;
}
.curve::after {
  content: "";
  display: block;
  position: absolute;
  border-radius: 100% 60%;
  width: 55%;
  height: 100%;
  right: 0;
  transform: translate(0, 60%);
  background-color: var(--color-transition-to);
}
.curve.animate {
  animation: 1s ease-in-out infinite alternate curve-waves;
}
@keyframes curve-waves {
  0% {
    height: var(--transition-height);
  }
  100% {
    height: 0;
  }
}

/* Default elements */
* {
  scroll-margin-top: 3rem;
  -webkit-tap-highlight-color: transparent;
}
iframe {
  border: none;
}
a {
  color: inherit;
  text-decoration: none;
  cursor: pointer;
}
a:hover {
  text-decoration: underline;
}
h3 {
  font-size: 1.3rem;
}
h4 {
  font-size: 1.04rem;
  font-weight: normal;
  margin: 0;
}
h5,
h6,
p {
  margin: 0;
  font-weight: normal;
  font-size: 1rem;
}
button {
  cursor: pointer;
  -webkit-appearance: none;
  appearance: none;
}
button > svg {
  height: 1em;
}
audio {
  width: 100%;
}
data.endpoints {
  display: none;
}

/* Utility classes */
.round {
  border-radius: 50%;
}
.text-muted {
  color: var(--color-muted-text);
}
.text-justify {
  text-align: justify;
}
.respect-newline {
  white-space: pre-wrap;
}
.side-info {
  color: var(--color-muted-text);
  text-align: right;
  font-size: 0.9em;
  margin-top: 0.6em;
}

/* Components */
.player {
  width: 70%;
  max-width: 70rem;
  background-color: var(--color-dimmed);
  border-radius: var(--border-radius);
  padding: 2rem;
  margin-top: 1.5rem;
}
.player:first-child {
  margin-top: 0;
}
.player-info[data-position-current] {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.player-info[data-position-current]::after {
  content: attr(data-position-current) " / " attr(data-position-end);
}
.player-controls {
  display: flex;
  justify-content: space-between;
  margin-top: 1.5rem;
}
.play-stop > button {
  font-size: 2.5rem;
  transition: transform 0.3s ease-out, visibility 0.3s;
}
.play-stop > button > svg {
  fill: var(--color-text);
}
.play-stop > button:first-of-type {
  position: absolute;
}
.play-stop[data-status="stopped"] > button:first-of-type,
.play-stop[data-status="playing"] > button:last-of-type {
  visibility: visible;
  transform: scale(1);
}
.play-stop[data-status="playing"] > button:first-of-type,
.play-stop[data-status="stopped"] > button:last-of-type {
  visibility: hidden;
  transform: scale(0);
}

.recordings-grid {
  display: grid;
  grid-template-columns: repeat(
    auto-fit,
    minmax(min(35rem, 100%), max-content)
  );
  margin-bottom: 3rem;
}
.recordings-grid > div {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.recordings-grid audio {
  box-sizing: border-box;
  padding: 0 1rem 0 1rem;
}

.recording {
  background-color: var(--color-background-alternative);
  border: var(--border-size) solid var(--color-background-field);
  border-radius: var(--border-radius);
  margin: 1rem;
  padding-bottom: 1rem;
}
.recording select {
  margin-left: auto;
  margin-bottom: 1rem;
  margin-right: 2rem;
}

.box {
  display: block;
  padding: 0 2rem 2rem 2rem;
}
.card {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  height: 12rem;
  width: 26rem;
  max-width: 100%;
  border: var(--border-size) solid var(--color-background-field);
  border-radius: var(--border-radius);
}
.card > img {
  position: absolute;
  width: 100%;
  height: inherit;
  border-radius: inherit;
  object-fit: cover;
}
.content {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.4rem 0.6rem;
  -webkit-backdrop-filter: blur(0.5rem) saturate(.7);
  backdrop-filter: blur(20px) saturate(.7) brightness(.5);
  border-top: var(--border-size) solid var(--color-background-field);
  border-bottom-left-radius: inherit;
  border-bottom-right-radius: inherit;
}
/* ... */

